--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-etl-tap-flat",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "repository": "https://github.com/gulpetl/gulp-etl-tap-flat",
   "description": "Utility gulp-etl plugin",
   "main": "dist/js/plugin.js",
@@ -13,7 +13,7 @@
     "test": "jest"
   },
   "author": "peterl@sbcotton.com",
-  "contributes": "Manoj Khatri",
+  "contributors": ["Manoj Khatri"],
   "license": "MIT",
   "keywords": [
     "gulpplugin",
