--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "jest"
   },
   "author": "peterl@sbcotton.com",
-  "contributors": ["Manoj Khatri"],
+  "contributors": [
+    "Manoj Khatri"
+  ],
   "license": "MIT",
   "keywords": [
     "gulpplugin",
@@ -35,7 +37,7 @@
     "@types/gulp-rename": "0.0.33",
     "@types/jest": "^23.3.14",
     "@types/loglevel": "^1.5.4",
-    "@types/node": "^10.14.9",
+    "@types/node": "^10.14.10",
     "@types/vinyl": "^2.0.3",
     "@types/vinyl-paths": "0.0.31",
     "del": "^4.1.1",
