--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gulp-etl-tap-flat",
   "version": "1.0.0",
   "repository": "https://github.com/gulpetl/gulp-etl-tap-flat",
-  "description": "Utility gulp-etl plugin",
+  "description": "Convert arbitrary flat files to Message Streams with a user function called to convert each line to an object",
   "main": "dist/js/plugin.js",
   "typings": "dist/types/plugin.d.ts",
   "files": [
@@ -23,7 +23,6 @@
   ],
   "homepage": "https://gulpetl.com",
   "dependencies": {
-    "from2": "^2.3.0",
     "gulp-error-handle": "^1.0.1",
     "loglevel": "^1.6.3",
     "pkginfo": "^0.4.1",
@@ -36,7 +35,7 @@
     "@types/del": "^4.0.0",
     "@types/gulp-rename": "0.0.33",
     "@types/jest": "^23.3.14",
-    "@types/loglevel": "^1.5.4",
+    "@types/loglevel": "^1.6.3",
     "@types/node": "^10.14.10",
     "@types/vinyl": "^2.0.3",
     "@types/vinyl-paths": "0.0.31",
