--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-etl-tap-flat",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": "https://github.com/gulpetl/gulp-etl-tap-flat",
   "description": "Convert arbitrary flat files to Message Streams with a user function called to convert each line to an object",
   "main": "dist/js/plugin.js",
@@ -19,7 +19,12 @@
   "license": "MIT",
   "keywords": [
     "gulpplugin",
-    "gulp-etl"
+    "gulp-etl",
+    "flat",
+    "delimited",
+    "fixed",
+    "width",
+    "file"
   ],
   "homepage": "https://gulpetl.com",
   "dependencies": {
@@ -32,21 +37,15 @@
     "vinyl": "^2.2.0"
   },
   "devDependencies": {
-    "@types/del": "^4.0.0",
-    "@types/gulp-rename": "0.0.33",
     "@types/jest": "^23.3.14",
     "@types/loglevel": "^1.6.3",
     "@types/node": "^10.14.10",
     "@types/vinyl": "^2.0.3",
-    "@types/vinyl-paths": "0.0.31",
-    "del": "^4.1.1",
     "gulp": "^4.0.2",
-    "gulp-rename": "^1.4.0",
     "jest": "^24.8.0",
     "jest-spec-reporter": "^1.0.6",
     "ts-jest": "^24.0.2",
     "ts-node": "^7.0.1",
-    "typescript": "^3.5.2",
-    "vinyl-paths": "^2.1.0"
+    "typescript": "^3.5.2"
   }
 }
